# GeoImage

./: .gitignore  CMakeLists.txt  README.md
cmake/: CPM.cmake
examples/: main.cpp  test_newyork.cpp  test_rotated.cpp
include/BLAS/: blas.hpp
include/GeoImage/: GeoImage.hpp
include/Geographic/: GeoHelpers.hpp
src/: GeoImage.cpp
tests/: test_geoimage.cpp
